2011-10-31 Fred Kiefer <FredKiefer@gmx.de>

	* Tests/gui/NSSavePanel/setDelegate_reload.m: Switch the save panel to
	not show hidden files and remove ".svn" from the expected
	results. This file was never present in an exported directory and
	will no longer exist with SVN 1.7.

2011-10-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButtonCell.m (-_popUpItemAction:): Inform bindings
	of the control view that the value has changed.

2011-10-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSNibLoading.m ([NSNibConnector-nibInstantiate]): Add
	this method.
	* Source/GSXibLoader.m ([IBBindingConnection-nibInstantiate):
	Instantiate the connector.

2011-10-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButton.m,
	* Source/NSMatrix.m,
	* Source/NSControl.m: Remove useless KVB code.

2011-10-31 Gregory Casamento <greg.casamento@gmail.com>

	* Source/NSTableColumn.m: (+initialize, -initWithCoder:,
	-encodeWithCoder:): Updated version to 3.  Added encoding for
	sort descriptor in encodeWithCoder:, added decoding for version 3
	to initWithCoder:

2011-10-28  Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h:
	* Source/GSTheme.m:
	* Source/GSThemeDrawing.m (-menuSeparatorItemColor,
	-drawSeparatorItemForMenuItemCell:withFrame:inView:isHorizontal:):
	* Source/NSMenuItemCell.m (-drawSeparatorItemWithFrame:inView:):
	Made separator menu item themable, by moving the drawing code from
	NSMenuItemCell to a new method in GSThemeDrawing.

2011-10-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep.m (+imageRepWithData:): Add missing AUTORELEASE.

2011-10-26  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSCell.m: Read/write NSLineBreakMode from the bits masked off
	by 0xE00 in NSCellFlags2. The previous location they were being
	read/written from was giving bogus values such as 7.

2011-10-25  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSThemeDrawing.m: Draw a question mark centered in the bezel